# magdiff

./: .gitignore  README.md  pyproject.toml  sandbox.ipynb
examples/: dipole.py  hemisphere_coils_views.py  lapoint_array.py  multi_dipole_system.py  rectangle.py
magdiff/: __init__.py  constants.py  math.py  system.py  utils.py  visualize.py
magdiff/components/: base.py  coil.py  cuboid.py  cylinder.py  dipole.py
magdiff/sensors/: __init__.py  base.py  hall.py
magdiff/visualization/: __init__.py  adapters.py  builder.py  overlays.py  scene.py  viewer.py
notes/: coordinate_system.md  fields.md
tests/: test_visualization.py
