[project]
name = "magdiff"
version = "0.1.0"
description = "A differentiable magnetic field simulation library using JAX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "plotly>=6.2.0",
    "ruff>=0.14.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["magdiff"]
